@@ -54,11 +54,8 @@ int check_type_consistency (const ACE_INET_Addr &addr)
 }
 
 
-int run_main (int argc, ACE_TCHAR *argv[])
+int run_main (int, ACE_TCHAR *[])
 {
-  ACE_UNUSED_ARG (argc);
-  ACE_UNUSED_ARG (argv);
-
   ACE_START_TEST (ACE_TEXT ("INET_Addr_Test_IPV6"));
 
   int status = 0;     // Innocent until proven guilty
